--- a/build_config/test/properties/swagger.properties
+++ b/build_config/test/properties/swagger.properties
@@ -1,5 +1,5 @@
 version=1.0.0
-resource.package=com.viewol.web
+resource.package=com.ms.web
 scan=true
-base.path=/viewol_web
-host=localhost:8899
+base.path=/inviteWeb
+host=localhost:8898
