--- a/build_config/prod/properties/swagger.properties
+++ b/build_config/prod/properties/swagger.properties
@@ -1,5 +1,5 @@
 version=1.0.0
-resource.package=com.viewol.web
+resource.package=com.ms.web
 scan=true
-base.path=/viewol_web
+base.path=/inviteWeb
 host=47.93.25.129:8080
