--- a/src/main/resources/properties/image_config.properties
+++ b/src/main/resources/properties/image_config.properties
@@ -1,3 +1,3 @@
 imageSavePath=/opt/playbill/
-imagePath=http://
-inviteUrl=http://
+imagePath=http://www.view-ol.com/invite/user_pic/
+inviteUrl=http://jfwx.minshengwealth.com/MALL/wechat/toGame
