--- a/build_config/prod/properties/image_config.properties
+++ b/build_config/prod/properties/image_config.properties
@@ -1,3 +1,3 @@
 imageSavePath=/opt/nginx/html/invite/user_pic/
 imagePath=http://www.view-ol.com/invite/user_pic/
-inviteUrl=http://superkris.nat300.top/MALL/wechat/toGame
+inviteUrl=http://superkris.natapp4.cc/wechat/wechat/toGame
